validacion de la LOGIN ok + reserva entre fechas

--- a/src/main/resources/static/css/one-page-wonder.css
+++ b/src/main/resources/static/css/one-page-wonder.css
@@ -113,6 +113,12 @@ header.masthead .bg-circle-4 {
   top: -5rem;
   right: 35%;
 }
+.mayus:first-letter{
+	text-transform: uppercase;
+}
+.mayustt{
+	text-transform: uppercase;
+}
 
 @media (min-width: 992px) {
   header.masthead {
