--- a/src/main/resources/templates/autos_disponibles.html
+++ b/src/main/resources/templates/autos_disponibles.html
@@ -20,7 +20,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home Empleado - Ventas</a>
+<!--        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home Empleado - Ventas</a>-->
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,7 @@
                     <td class="mayus"scope="row" th:text="${vehiculo.operativo}">
                     <td>
                         <!-- Declaramos y enviamos el valor de la variable action -->
-                        <a th:href="@{/reserva/generar_reserva_empleado(idv=${vehiculo.id},idc=${clienteLog.id},ide=${empleadoLog.id})}">Reservar</a>
+                        <a th:href="@{/reserva/generar_reserva(idv=${vehiculo.id},idc=${clienteLog.id}, fecha1=${fecha1}, fecha2=${fecha2})}">Reservar</a>
                     </td>
                 </tr>
                 </tbody>
