--- a/src/main/resources/templates/contrato_index.html
+++ b/src/main/resources/templates/contrato_index.html
@@ -28,7 +28,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-<!--      <a class="navbar-brand"  th:href="@{/empleado/(correo=${clienteLog.mail})}">Alquiler de Vehiculos - HOME Empleado</a>-->
+      <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home Empleado - Ventas</a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/registro">Reserva</a>
+            <a class="nav-link" href="/reserva/">Reserva</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/">salir</a>
@@ -47,21 +48,19 @@
   </nav>
 
   <section>
-    <div class="container">
+    <div class="container" style="padding-top: 100px">
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">FORMALIZAR EL CONTRATO</h2>
             <form action="/contrato/generar_contrato/" method="GET">
               <input type="hidden" name="ide" th:value="${empleadoLog.id}">
-
               <label>NÚMERO DE RESERVA</label>
-              <input type="number" class="form-control" name="idres" />
-
+              <input type="number" class="form-control" name="idres"/>
+              <br/>
               <label>ID Empleado</label>
               <input type="text" class="form-control" name="ide" th:value="${empleadoLog.id}"/>
-
-              <br /><button type="submit" class="btn btn-primary">Ingresar</button>
+              <br/><button type="submit" class="btn btn-primary">Ingresar</button>
             </form>
           </div>
         </div>
