--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,56 +36,37 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/registro">Registro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Log In</a>
+            <a class="nav-link" href="/registro">Registrate</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <header class="masthead text-center text-white">
-    <div class="masthead-content">
-      <div class="container">
-        <h1 class="masthead-heading mb-0">Alquiler de Vehiculos</h1>
-        <h2 class="masthead-subheading mb-0">Encontra tu automovil ideal</h2>
-        <a href="/registro" class="btn btn-primary btn-xl rounded-pill mt-5">¡Registrate!</a>
-      </div>
-    </div>
-    <div class="bg-circle-1 bg-circle"></div>
-    <div class="bg-circle-2 bg-circle"></div>
-    <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div>
-  </header>
 
-  <section>
+  <br/>
+  <section style="padding-top: 100px">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-2">
-          <div class="p-5">
-            <img class="img-fluid rounded-circle" src="ColocarImagen" alt="">
-          </div>
-        </div>
         <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h2 class="display-4">Alquiler de Vehiculos</h2>
-            <form action="/prueba/" method="POST">
+          <div class="p-8">
+            <h2 class="display-4">Ingrese sus Datos</h2>
+            <form action="/usuarioType/" method="POST">
               <label>E-Mail</label>
-              <input type="email" class="form-control" name="correo" />
-
+              <input type="email" class="form-control" name="correo"/>
+              <br/>
               <label>Clave</label>
-              <input type="password" class="form-control" name="password" />
-
-              <br /><button type="submit" class="btn btn-primary">Ingresar</button>
+              <input type="password" class="form-control" name="password"/>
+              <br/><button type="submit" class="btn btn-primary">Ingresar</button>
+              <br/>
             </form>
           </div>
         </div>
       </div>
   </section>
 
-
+  <br/>
+  <br/>
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
