--- a/src/main/resources/templates/reserva_empleado.html
+++ b/src/main/resources/templates/reserva_empleado.html
@@ -22,17 +22,18 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/cliente/(correo=${clienteLog.mail})}">Alquiler de Vehiculos - HOME</a>
+        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home Empleado - Ventas</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial</a>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial</a>-->
 
-                </li>
+<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="/">Salir</a>
                 </li>
@@ -48,9 +49,10 @@
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
                     <h1 class="display-5">Formulario de Reserva</h1>
-                    <form action="/reserva/confi_reserva" method="POST" enctype="multipart/form-data">
+                    <form action="/reserva/confi_reserva_empleado" method="POST" enctype="multipart/form-data">
                         <input type="hidden" name="idc" th:value="${clienteLog.id}">
                         <input type="hidden" name="idv" th:value="${vehiculo.id}">
+                        <input type="hidden" name="ide" th:value="${empleadoLog.id}">
 
                         <label><h3>DATOS DEL CLIENTE</h3></label><br>
                         <label>Nombre</label>
@@ -84,9 +86,10 @@
                         <!--                DATOS RESERVA     -->
                         <label><h3>DATOS DE LA RESERVA</h3></label><br>
                         <label>Fecha de Retiro</label>
-                        <input ttype="text" class="form-control mayus" name="fecha1" th:value="${fecha1}"/><br>
+                        <input type="Date" class="form-control" name="fRetiro"/><br>
                         <label>Fecha de Devolución</label>
-                        <input type="text" class="form-control mayus" name="fecha2" th:value="${fecha2}"/><br/>
+                        <input type="Date" class="form-control" name="fDevolucion"/>
+                        <br/>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </form>
                 </div>
