mejoras al funcionamiento del registro

--- a/src/main/resources/templates/exito.html
+++ b/src/main/resources/templates/exito.html
@@ -63,7 +63,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/m2.jpg" alt="">
+<!--           foto <img class="img-fluid rounded-circle" src="img/m2.jpg" alt="">-->
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -79,7 +79,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p>
+      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
     </div>
     <!-- /.container -->
   </footer>
