cambio del atributo "edad" x "fNacimiento"

--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -68,7 +68,7 @@
               <input type="text" class="form-control" name="dni" th:value="${dni}" />
 
               <label>Edad</label>
-              <input type="text" class="form-control" name="edad" th:value="${edad}" />
+              <input type="date" class="form-control" name="fNacimiento" th:value="${fNacimiento}" />
 
               <label>Telefono</label>
               <input type="text" class="form-control" name="telefono" th:value="${telefono}" />
