--- a/src/main/resources/templates/reserva_empleado.html
+++ b/src/main/resources/templates/reserva_empleado.html
@@ -82,13 +82,16 @@
                         <input type="text" class="form-control mayus" name="tipoVehiculo" th:value="${vehiculo.tipoVehiculo}"/>
                         <label>Tipo Gama</label>
                         <input type="text" class="form-control mayus" name="typeGama" th:value="${vehiculo.typeGama}"/><br>
-
+                        <label>Precio Diario</label>
+                        <input type="text" class="form-control" name="precio" th:value="${vehiculo.precio}"/><br>
                         <!--                DATOS RESERVA     -->
                         <label><h3>DATOS DE LA RESERVA</h3></label><br>
                         <label>Fecha de Retiro</label>
-                        <input type="Date" class="form-control" name="fRetiro"/><br>
+                        <input ttype="text" class="form-control mayus" name="fRetiro" th:value="${fRetiro}"/><br>
                         <label>Fecha de Devolución</label>
-                        <input type="Date" class="form-control" name="fDevolucion"/>
+                        <input type="text" class="form-control mayus" name="fDevolucion" th:value="${fDevolucion}"/><br/>
+                        <label>Total a Pagar</label>
+                        <input type="text" class="form-control" name="total" th:value="${total}"/><br/>
                         <br/>
                         <button type="submit" class="btn btn-primary">Aceptar</button>
                     </form>
